# interview_simulator

./: .env.example  .gitignore  agentic_framework.ipynb  dev.sh  interview_confident_2025-04-18T22-17-58-821Z.json  pyproject.toml  report-restored.html  shy_2025-04-19T01-56-56-302Z.json
app/: main.py
app/agents/: dialogue_evaluation_agent.py  evaluation_agent.py  interviewee_agent.py  interviewee_agent_new.py  interviewer_feedback_agent.py  prompt_builder.py  value_agent.py
app/agents/prompts/: candidate_questions.yaml  criteria_checker_prompt.yaml  evaluation_system_prompt.yaml  interviewer_feedback_prompt.yaml  persona_system_prompt.yaml  star_prompt.yaml  utils.py
app/agents/prompts/personas/: confident.yaml  enthusiastic.yaml  friendly.yaml  shy.yaml  toxic.yaml  unprepared.yaml
app/agents/prompts/values/: collaboration.yaml  proactivity.yaml  professionalism.yaml  responsibility.yaml  self_development.yaml
app/agents/tools/: ask_hr_question.py  debug_tool.py  extract_criterias.py  extract_result.py  lie_answer.py  value_tools.py
app/agents/wrappers/: history_wrapper_agent.py
app/api/: evaluation.py  interview.py  interview_bckp.py
app/frontend/: evaluation.html  index.html  report.html  select-candidate.html
app/model/: tts.py
