[project]
name = "venv-ds"
version = "0.1.0"
description = ""
authors = [
    {name = "ruaklip",email = "ilya.kuliev@RAIFFEISEN.RU"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "openai-agents (>=0.0.11,<0.0.12)",
    "jupyterlab (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
